--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+     "start": "react-scripts start",
+  "build": "react-scripts build && ls -la build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
+    
   },
   "dependencies": {
     "axios": "^1.9.0",
