--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-     "start": "react-scripts start",
-  "build": "react-scripts build && ls -la build",
+    "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
-    
   },
   "dependencies": {
     "axios": "^1.9.0",
